add img, tags, and links

--- a/pet-site.html
+++ b/pet-site.html
@@ -4,11 +4,13 @@
   <title>Moose + Frank 4Ever</title>
 </head>
 <body>
-  <h1>These cats FIGHT!</h1>
+  <h1>These cats <strong>FIGHT!</strong></h1>
+  <img src="img/catfight.webp" alt="A photo of two cats fighting">
   <h2>They love:</h2>
   <ul>
     <li>Laying on the window sill</li>
-    <li>Fighting each other for control of The Box</li>
+    <li>Fighting each other for control of <em>The Box</em></li>
+    <li>Sending each other to <a href="https://www.brooklynyardvet.com/">the vet</a></li>
   </ul>
 </body>
 </html>
