Add css styling including background color, img centering, and fonts

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <title>Moose + Frank 4Ever</title>
 </head>
+<link href="css/style.css" rel="stylesheet" type="text/css">
 <body>
-  <h1>These cats <strong>FIGHT!</strong></h1>
-  <img src="img/catfight.webp" alt="A photo of two cats fighting">
+  <h1>These cats <span class="fancy">FIGHT!</span></h1>
+  <img src="img/catfight.webp" alt="A photo of two cats fighting" class="centered-image">
   <h2>They love:</h2>
   <ul>
     <li>Laying on the window sill</li>
-    <li>Fighting each other for control of <em>The Box</em></li>
+    <li>Fighting each other for control of <span class="emph">The Box</span></li>
     <li>Sending each other to <a href="https://www.brooklynyardvet.com/">the vet</a></li>
   </ul>
 </body>
